# pybind11-proj-toy

./: .editorconfig  CMakeLists.txt  MANIFEST.in  setup.py
include/: toy.h
python/csrc/: capi.cc
python/pytoy/: __init__.py
src/: toy.cc
